--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "react-keep-alive": "^2.5.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "axios":"^0.26.0",
+    "react-router-dom":"^5.0.0",
+    "react-redux":"^7.2.6",
+    "react-router-config":"^5.1.1",
+    "mitt":"^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
